--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ data.txt
 db.sqlite3
 /catalog/migrations
 /blog/migrations
-/auth_users/migrations
+/users/migrations
 /media/blog_entry
 /media/products
 /media/avatars
