--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pure_eval==0.2.3
 Pygments==2.18.0
+python-dotenv==1.0.1
 pytils==0.4.1
 six==1.16.0
 sqlparse==0.5.0
