есть кеширование на страницу детальную страницу продукта, категории, блоговой записи, профиля пользователя, и список категорий который в footer тоже работает через кеш также обновление settings.py, README.md и requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ pure_eval==0.2.3
 Pygments==2.18.0
 python-dotenv==1.0.1
 pytils==0.4.1
+redis==5.0.8
 six==1.16.0
 sqlparse==0.5.0
 stack-data==0.6.3
