--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ DB_USER=user
 DB_HOST=your_host
 DB_PORT=your_port
 DB_PASSWORD=password
+EMAIL_CONSOLE=True/False
 EMAIL_HOST_USER=your@yandex.ru
 EMAIL_HOST_PASSWORD=password
 DJANGO_CACHES_ENABLED=True/False
@@ -13,3 +14,5 @@ DJANGO_CACHES_LOCATION=your_location
 
 # Пример DJANGO_SECRET_KEY
 # django-insecure-g#ggggg1(%gg&ggggg1g9gl1-1@@gggg^!ggg3ggg^!-1g*
+
+# Если EMAIL_CONSOLE == True то имейл отправляется в консоль
